added dtos for CurrentAccountDTO , SavingAccountDTO , BankAccountDTO added mapper methods for each of the account classes added a BankAccountService added a BankAccountRestController a lot of refactoring for previous methods